@@ -1,3 +1,10 @@
+1999-12-11  Kenichi OKADA <okada@opaopa.org>
+
+	* sasl.el (sasl-scram-md5-client-msg-1): New function.
+	(sasl-scram-md5-client-msg-2): New function.
+	(sasl-scram-md5-authenticate-server): New function.
+	(sasl-scram-md5-client-security-info): New variable.
+
 1999-12-09  Kenichi OKADA <okada@opaopa.org>
 
 	* mime-def.el (mime-library-product): Up.
